2010-03-28  Jedrzej Nowacki  <jedrzej.nowacki@nokia.com>

Reviewed by Simon Hausmann.

        QScriptEngine API was enriched by globalObject() method
        which give an access to the global object.

        [Qt] QScriptEngine doesn't give an access to global object
        https://bugs.webkit.org/show_bug.cgi?id=36603

        * qt/api/qscriptengine.cpp:
        (QScriptEngine::globalObject):
        * qt/api/qscriptengine.h:
        * qt/api/qscriptengine_p.cpp:
        (QScriptEnginePrivate::globalObject):
        * qt/api/qscriptengine_p.h:
        * qt/tests/qscriptengine/tst_qscriptengine.cpp:
        (tst_QScriptEngine::globalObject):

Canonical link: https://commits.webkit.org/47980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56686 268f45cc-cd09-0410-ab3c-d52691b4dbfc