JavaScriptCore/qt/api/qscriptengine.h
@@ -47,6 +47,7 @@ public:
 
     QScriptValue nullValue();
     QScriptValue undefinedValue();
+    QScriptValue globalObject() const;
 private:
     friend class QScriptEnginePrivate;
 
