JavaScriptCore/qt/api/qscriptengine_p.h
@@ -53,6 +53,8 @@ public:
     inline JSValueRef makeJSValue(bool number) const;
     inline JSValueRef makeJSValue(QScriptValue::SpecialValue value) const;
 
+    QScriptValuePrivate* globalObject() const;
+
     inline QScriptStringPrivate* toStringHandle(const QString& str) const;
 
     inline JSGlobalContextRef context() const;
